--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Student Admission Form</h1>
     <form method="post"
-        action="https://script.google.com/macros/s/AKfycbxNdFeyYcJ9T4EbhKjlnF4RmEQsuQnZ9y6NxjuSMJBviOJUPwPSL2z1S3yKjnWKGYx9/exec">
+        action="YOUR_APP_SCRIPT_URL">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
